December 31, 2014
	Release N102
	- There is no longer a separate Typedtree traversal pass, after
	the type checking, to translate brackets and escapes. The
	translation is done right after the type-checking of the 0-level
	bracket. That means that for staging-annotation-free code,
	MetaOCaml has no substantial overhead.
	- Use attributes for brackets, escapes and CSP (and internally
	for levels and inexpansiveness). Much fewer OCaml files are
	modified.
	- New function Runcode.typecheck_code for the benefit of offshoring
	- New function Runcode.add_search_path to add a directory to
	the search path for .cmi/.cmo files -- report by Nicolas Ojeda Bar
	- Better handling of CSP. For simple cases, there are no longer
	any serialization problems.
	- Overall better printing, of CSP, code and error messages.
	- Overall, more uniform, better-factored code.
	- metaocamlc is now a simple .c file; it adds compiler-libs only
	in the case when the executable is built. Otherwise, we may end up
	with the duplicate libraries.

April 24, 2014
	Fixed the problem noted by Jun Inoue in toplevel MetaOCaml.
	If the first Runcode.run is used after a type declaration,
	the defined type is considered locally scoped, which causes
	type checking errors or assettion faliures in typechecking.
	Preparing the environment for Runcode.run has a side-effect,
	of corrupting Ident timestamps. The timestamps are preserved now.

November 26, 2013
	Release N101
	Removed environment classifiers.
	Syntax .! is replaced with the ordinary prefix operation
	!.  (alias run) in the module Runcode. Runcode.run is an
	ordinary function, and is not part of the MetaOCaml kernel.
	New API for running code, encouraging the development of new ways
	to execute code values (see metalib/runcode.mli).
	BER N101 is binary compatible with OCaml 4.01. Building it
	no longer involves bootstrapping.
	Printing code is now part of OCaml (Pprintast, which was influenced by
        MetaOCaml).